(executables 
 (names tests)
 (modes byte native)
 (modules tests)
 (libraries batteries bin_prot sexplib yojson)
 (preprocess (pps ppx_bin_prot ppx_deriving_yojson ppx_sexp_conv ppx_vers))
 )

(executables 
 (names UserT)
 (modes byte)
 (modules UserT)
 (libraries bin_prot sexplib yojson)
 (preprocess (pps ppx_bin_prot ppx_deriving_yojson ppx_sexp_conv ppx_vers))
)

;;(executables 
;; (names tests_done)
;; (modes byte)
;; (modules tests_done)
;; )

(env
  (dev
    (flags (:standard -w -32 -w -49 -w -6 -w -33 -w -11))))
