(executables
  (names test_run)
  (modes byte native)
  (modules test_run)
  (libraries unix pcre)
)

(library 
 (name abstract)
 (preprocess (pps ppx_vers))
 (modules abstract)
)

(library 
 (name variant)
 (preprocess (pps ppx_vers))
 (modules variant)
)

(library 
 (name record_vers)
 (preprocess (pps ppx_vers))
 (modules record_vers)
)

(library 
 (name record_novers)
 (preprocess (pps ppx_vers))
 (modules record_novers)
)

(library 
 (name pvariant)
 (preprocess (pps ppx_vers))
 (modules pvariant)
)

(library 
 (name with_bin_io)
 (preprocess (pps ppx_vers ppx_bin_prot))
 (modules with_bin_io)
)

(library 
 (name ptag_bin_io)
 (preprocess (pps ppx_vers ppx_bin_prot))
 (modules ptag_bin_io)
)

(library 
 (name include_type)
 (preprocess (pps ppx_vers))
 (modules include_type)
)

;(env (dev (flags (:standard -w -14))))
